<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/book_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/book_content"
        />
    <TextView
        android:id="@+id/author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/author_content"
        />
    <TextView
        android:id="@+id/genre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/genre_content"
        />
    <TextView
        android:id="@+id/publication_year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/publication_year_content"
        />
    <TextView
    android:id="@+id/status_read_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:textSize="30sp"
    android:text="@string/status_read_content"
    />


</LinearLayout>