<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_text_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:inputType="text"
        android:text="@string/book_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:inputType="text"
        android:text="@string/author_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_book_title" />

    <EditText
        android:id="@+id/edit_text_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:inputType="text"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_author_name" />
    <EditText
        android:id="@+id/edit_text_publication_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:inputType="text"
        android:text="@string/publication_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_genre" />
    <CheckBox
        android:id="@+id/edit_text_read_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_publication_year"/>
    <Button
        android:id="@+id/button_delete_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Book"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_read_status"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
